# livekit-plugins-respeecher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: text_to_speech.py
src/livekit/plugins/respeecher/: __init__.py  models.py  tts.py
tests/: test_respeecher_plugin.py
